--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+
+body, html {
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* Assurez-vous que le navbar et le footer prennent toute la largeur */
+  .navbar, .footer {
+    width: 100%;
+  }
